# MiniBuildRust

./: .gitignore  Buildfile  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
src/: cache.rs  cli.rs  executor.rs  graph.rs  main.rs  parser.rs
